add leveldb binding following https://github.com/2JS/YCSB

--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@ LICENSE file.
     <module>infinispan</module>
     <module>jdbc</module>
     <module>kudu</module>
+    <module>leveldb</module>
     <module>maprdb</module>
     <module>maprjsondb</module>
     <module>memcached</module>
