--- a/core/pom.xml
+++ b/core/pom.xml
@@ -59,7 +59,35 @@ LICENSE file.
       <artifactId>HdrHistogram</artifactId>
       <version>2.1.4</version>
     </dependency>
+
+
+<!--    <dependency>-->
+<!--      <groupId>commons-httpclient</groupId>-->
+<!--      <artifactId>commons-httpclient</artifactId>-->
+<!--      <version>3.1</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.httpcomponents</groupId>-->
+<!--      <artifactId>httpclient</artifactId>-->
+<!--      <version>4.2.6</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.mongodb</groupId>-->
+<!--      <artifactId>mongo-java-driver</artifactId>-->
+<!--      <version>${mongodb.version}</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.googlecode.json-simple</groupId>-->
+<!--      <artifactId>json-simple</artifactId>-->
+<!--      <version>1.1</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>site.ycsb</groupId>-->
+<!--      <artifactId>core</artifactId>-->
+<!--      <version>0.18.0-SNAPSHOT</version>-->
+<!--    </dependency>-->
   </dependencies>
+
 
   <build>
     <resources>
