--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -57,6 +57,7 @@ infinispan:site.ycsb.db.InfinispanClient
 jdbc:site.ycsb.db.JdbcDBClient
 kudu:site.ycsb.db.KuduYCSBClient
 leveldb:site.ycsb.db.LevelDbClient
+leveldbjni:cn.neu.hotness.leveldbjni.LevelDBClient
 memcached:site.ycsb.db.MemcachedClient
 mongodb:site.ycsb.db.MongoDbClient
 mongodb-async:site.ycsb.db.AsyncMongoDbClient
