--- a/leveldb/pom.xml
+++ b/leveldb/pom.xml
@@ -23,15 +23,15 @@
   	  <artifactId>httpclient</artifactId>
   	  <version>4.2.6</version>
 	</dependency>
-    <dependency>
-      <groupId>org.mongodb</groupId>
-      <artifactId>mongo-java-driver</artifactId>
-      <version>${mongodb.version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.mongodb</groupId>-->
+<!--      <artifactId>mongo-java-driver</artifactId>-->
+<!--      <version>${mongodb.version}</version>-->
+<!--    </dependency>-->
 	<dependency>
 	  <groupId>com.googlecode.json-simple</groupId>
 	  <artifactId>json-simple</artifactId>
-	  <version>1.1</version>
+	  <version>1.1.1</version>
 	</dependency>
     <dependency>
       <groupId>site.ycsb</groupId>
@@ -39,29 +39,4 @@
       <version>0.18.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
-
-<!--  <build>-->
-<!--    <plugins>-->
-<!--     <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-assembly-plugin</artifactId>-->
-<!--        <version>${maven.assembly.version}</version>-->
-<!--        <configuration>-->
-<!--          <descriptorRefs>-->
-<!--            <descriptorRef>jar-with-dependencies</descriptorRef>-->
-<!--          </descriptorRefs>-->
-<!--          <appendAssemblyId>false</appendAssemblyId>-->
-<!--        </configuration>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <phase>package</phase>-->
-<!--            <goals>-->
-<!--              <goal>single</goal>-->
-<!--            </goals>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
-<!--    </plugins>-->
-<!--  </build>-->
-
 </project>
